--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,10 +23,11 @@ const navigation = [
       },
     ],
   },
-  { name: "Trenerzy", href: "/trenerzy" },
+  //{ name: "Trenerzy", href: "/trenerzy" },
   { name: "Plan zajęć", href: "/plan-zajec" },
   { name: "Cennik", href: "/cennik" },
-  { name: "Galeria", href: "/galeria" },
+  //{ name: "Galeria", href: "/galeria" },
+  { name: "Lokalizacja", href: "/lokalizacja" },
   { name: "Kontakt", href: "/kontakt" },
 ];
 
