--- a/src/pages/akademia-pilkarska-torun/index.astro
+++ b/src/pages/akademia-pilkarska-torun/index.astro
@@ -251,7 +251,7 @@ const faqItems = [
               d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
             ></path>
           </svg>
-          Rekrutacja otwarta 2024/2025
+          Rekrutacja otwarta 2026/2027
         </div>
 
         <h1 class="text-white mb-6 animate-fade-in-up">
@@ -364,8 +364,10 @@ const faqItems = [
             </p>
           </div>
           <div class="mt-8 flex flex-wrap gap-4">
-            <a href="/trenerzy" class="btn-primary"> Poznaj trenerów </a>
-            <a href="/galeria" class="btn-secondary"> Zobacz galerię </a>
+            {
+              /*<a href="/trenerzy" class="btn-primary"> Poznaj trenerów </a> 
+            <a href="/galeria" class="btn-secondary"> Zobacz galerię </a>*/
+            }
           </div>
         </div>
 
@@ -689,7 +691,9 @@ const faqItems = [
               Regularne szkolenia i doskonalenie
             </li>
           </ul>
-          <a href="/trenerzy" class="btn-primary"> Poznaj naszych trenerów </a>
+          {
+            /*<a href="/trenerzy" class="btn-primary"> Poznaj naszych trenerów </a> */
+          }
         </div>
 
         <div class="reveal animation-delay-200">
