--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import CookieBanner from "../components/CookieBanner.astro";
+
 export interface Props {
   title: string;
   description: string;
@@ -188,5 +190,6 @@ import Footer from "@/components/Footer.astro";
           observer.observe(el);
         });
     </script>
+    <CookieBanner />
   </body>
 </html>
