--- a/src/pages/plan-zajec/index.astro
+++ b/src/pages/plan-zajec/index.astro
@@ -206,7 +206,7 @@ const faqItems = [
   {
     question: "Gdzie dokładnie odbywają się treningi?",
     answer:
-      "Treningi piłkarskie odbywają się na boisku przy ul. Pera Jonssona 7 w Toruniu. W przypadku złej pogody (deszcz, mróz) zajęcia przenosimy do hali sportowej – informujemy o tym rodziców SMS-em.",
+      "Treningi piłkarskie odbywają się na boisku na orliku przy ul. Wojska Polskiego 47a w Toruniu. W przypadku złej pogody (deszcz, mróz) zajęcia przenosimy do hali sportowej – informujemy o tym rodziców SMS-em.",
   },
   {
     question: "O której godzinie powinienem przyprowadzić dziecko?",
@@ -270,7 +270,7 @@ const faqItems = [
               d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
             ></path>
           </svg>
-          Sezon 2025/2026
+          Sezon 2026/2027
         </div>
 
         <h1 class="text-white mb-6 animate-fade-in-up">
@@ -377,7 +377,7 @@ const faqItems = [
                                   {session.ageRange}
                                 </div>
                                 <div class="flex items-center gap-1 text-dark-400 dark:text-dark-500 text-xs mt-2">
-                                  <svg
+                                  {/*<svg
                                     class="w-3 h-3"
                                     fill="none"
                                     viewBox="0 0 24 24"
@@ -390,7 +390,7 @@ const faqItems = [
                                       d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                                     />
                                   </svg>
-                                  {session.trainer}
+                                  {session.trainer}*/}
                                 </div>
                               </div>
                             ))}
