--- a/src/pages/akademia-pilkarska-torun/index.astro
+++ b/src/pages/akademia-pilkarska-torun/index.astro
@@ -602,7 +602,7 @@ const faqItems = [
     </div>
   </section>
 
-  <!-- Trenerzy Preview -->
+  <!-- Trenerzy Preview 
   <section class="section-padding bg-white dark:bg-dark-900">
     <div class="container-custom">
       <div class="grid lg:grid-cols-2 gap-12 items-center">
@@ -716,7 +716,7 @@ const faqItems = [
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!-- CTA Section -->
   <section
